Improve waiting in tests